--- a/Minesweeper_Classic/Minesweeper_Classic.csproj
+++ b/Minesweeper_Classic/Minesweeper_Classic.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HighscoreEntry.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HighscoreEntry.Designer.cs">
+      <DependentUpon>HighscoreEntry.cs</DependentUpon>
+    </Compile>
     <Compile Include="HighscoreScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +77,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HighscoreEntry.resx">
+      <DependentUpon>HighscoreEntry.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HighscoreScreen.resx">
       <DependentUpon>HighscoreScreen.cs</DependentUpon>
