--- a/Minesweeper_Classic/Minesweeper_Classic.csproj
+++ b/Minesweeper_Classic/Minesweeper_Classic.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -105,6 +106,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="sound\bomb.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="sound\tick.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="sound\win.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
