--- a/Minesweeper_Classic/Minesweeper_Classic.csproj
+++ b/Minesweeper_Classic/Minesweeper_Classic.csproj
@@ -52,11 +52,11 @@
     <Compile Include="CustomDifficulty.Designer.cs">
       <DependentUpon>CustomDifficulty.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="MainGame.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainGame.Designer.cs">
+      <DependentUpon>MainGame.cs</DependentUpon>
     </Compile>
     <Compile Include="HighscoreEntry.cs">
       <SubType>Form</SubType>
@@ -75,8 +75,8 @@
     <EmbeddedResource Include="CustomDifficulty.resx">
       <DependentUpon>CustomDifficulty.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainGame.resx">
+      <DependentUpon>MainGame.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HighscoreEntry.resx">
       <DependentUpon>HighscoreEntry.cs</DependentUpon>
